trunk/Archive2/02/19c8afc5961a6e/output
main.cpp:5:18: error: invalid digit "9" in octal constant
     std::cout << 09 << std::endl;
                  ^
