trunk/Archive2/02/19c8afc5961a6e/main.cpp
#include <iostream>

int main()
{
    std::cout << 09 << std::endl;
    return 0;
}